--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "three": "^0.89.0",
+    "three-fbx-loader": "^1.0.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
